manifests/apps/manifests/engawa/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: engawa
  labels:
    shared-gateway-access: 'true'
